# virtual-knowledge-graph-connectivity

./: .gitignore  Makefile  README.md  STRUCTURE.md  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md
biomedical-rag-bench-question-reference/: questions.jsonl
data/hetionet/rdf/: hetionet-smoke.ttl
docs/: architecture.md  enterprise-auth-findings.md  how-to-run-ui.md  polyglot-layer-choice.md  staggered-execution.md
harness/: config.py  explain.py  parity.py  run_query.py  test_rungs.py
ingest/: build_tables.py  fetch.py  load_iceberg.py  load_postgres.py
journal/: 2026-07-09.md  2026-07-10.md  2026-07-10_02.md  2026-07-10_03.md  2026-07-12.md  2026-07-13.md  INDEX.md
mappings/: iceberg.obda  polyglot.obda  postgres.obda
ontology/: hetionet-schema.ttl
ontop/: postgres.properties  trino.properties
postgres/initdb/: 01_schema.sql  02_seed_gene.sql
queries/: q01_list_compounds.rq  q02_disease_associates_gene.rq  q03_compound_binds_gene.rq  q04_compound_treats_disease.rq  q05_count_genes.rq  q06_count_compounds.rq  q07_gene_two_hop.rq  q08_smoke.rq
secrets/: .env.example
trino/catalog/: iceberg.properties  postgresql.properties
ui/: index.html  server.py
ui/examples/: iri_vs_label.rq
